[gd_scene load_steps=3 format=3 uid="uid://e9v1emailview"]

[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="1_n0rnv"]
[ext_resource type="Script" uid="uid://9800a0ca567a" path="res://components/apps/sigma_mail/email_view.gd" id="2_n0rnv"]

[node name="EmailView" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n0rnv")
script = ExtResource("2_n0rnv")
window_title = "Email"
show_in_taskbar = false
is_popup = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FromLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="SubjectLabel" type="Label" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="BodyLabel" type="RichTextLabel" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
fit_content = true

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2

